# mikrotik-config

./: .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: docker-build.yml
app/: __main__.py  config.py  logging_config.py  main.py
app/api/controllers/: device_controller.py  health_controller.py
app/models/: __init__.py  device.py
app/repositories/: __init__.py  device_repository.py
app/services/: __init__.py  device_service.py  mikrotik_service.py
app/templates/: base.html  device_detail.html  device_list.html  index.html
