[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[project]
name = 'mikrotik-config'
version = '0.1.0'
description = 'Web interface for Mikrotik REST API'
readme = 'README.md'
requires-python = '>=3.12'
dependencies = [
    'litestar[standard]>=2.0.0',
    'jinja2>=3.1.0',
    'pydantic>=2.0.0',
    'pydantic-settings>=2.0.0',
    'httpx>=0.25.0',
    'sniffio>=1.3.0',
    'uvicorn[standard]>=0.24.0',
]

[project.optional-dependencies]
dev = [
    'pytest>=7.4.0',
    'pytest-asyncio>=0.21.0',
    'black>=23.0.0',
    'ruff>=0.1.0',
    'mypy>=1.5.0',
]

[tool.ruff]
line-length = 100
target-version = 'py312'

[tool.ruff.lint]
select = ['E', 'F', 'I', 'N', 'W', 'UP']
ignore = []

[tool.black]
line-length = 100
target-version = ['py312']

[tool.mypy]
python_version = '3.12'
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.hatch.build.targets.wheel]
packages = ['app']

